@@ -56,6 +56,8 @@ Version 0.7.4 UNRELEASED
 
   * Convert some instances of boost::unordered_{set,map,multimap} to std::
 
+  * Convert some instances of boost::hash to std::
+
 
 [2015-10-07]
 Version 0.7.3
